--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "hls": "^0.0.1",
     "hls.js": "^1.6.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
