--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "hls.js": "^1.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-iframe": "^1.8.5",
     "react-player": "^2.16.0"
   },
