--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-iframe": "^1.8.5",
     "react-player": "^2.16.0",
+    "react-spinners": "^0.17.0",
     "terser": "^5.39.0"
   },
   "devDependencies": {
