--- a/usapi/appsettings.json
+++ b/usapi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=USChannelDB1;Trusted_Connection=True"
+    "ApplicationDbContext": ""
   },
   "Logging": {
     "LogLevel": {
@@ -10,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+ 
