--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "deploy": "your-deployment-command-here"
   },
   "dependencies": {
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.8.4",
     "hls": "^0.0.1",
     "hls.js": "^1.6.2",
