project backend cleanup

--- a/usapi/appsettings.json
+++ b/usapi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApplicationDbContext": ""
+    "ChannelDbContext": "Server=localhost;Database=ChannelDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -10,4 +10,3 @@
   },
   "AllowedHosts": "*"
 }
- 
